# Sleep-Tracker

./: .gitignore  CLAUDE.md  FEATURES.md  HANDOFF.md  INTEGRATION.md  PLAN.md  README.md  VALIDATION.md
.claude/: settings.json
datasheets/: README.md
docs/: watch-ui-mockup.html
firmware/: .gitignore  CMakeLists.txt  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
firmware/components/actigraphy/: CMakeLists.txt  actigraphy.c
firmware/components/actigraphy/include/: actigraphy.h
firmware/components/board/: CMakeLists.txt  board.c  idf_component.yml
firmware/components/board/include/: board.h
firmware/components/bodynet/: CMakeLists.txt  bodynet.c
firmware/components/bodynet/include/: bodynet.h
firmware/components/bsp/: CMakeLists.txt  bsp.c
firmware/components/max30102/: CMakeLists.txt  README.md  max30102.c
firmware/components/nettime/: CMakeLists.txt  nettime.c  wifi_config.example.h
firmware/components/pmu/: CMakeLists.txt  pmu.c
firmware/components/power/: CMakeLists.txt  power.c
firmware/components/ppg/: CMakeLists.txt  ppg.c
firmware/components/rtc/: CMakeLists.txt  rtc.c
firmware/components/sd_logger/: CMakeLists.txt  sd_logger.c
firmware/components/sleep_core/: CMakeLists.txt  sleep_core.c
firmware/components/sync/: CMakeLists.txt  sync.c
firmware/components/ui/: CMakeLists.txt  ui.c
firmware/main/: CMakeLists.txt  sleep_tracker_main.c
tools/: README.md  analyze_ppg.py  capture_ppg.py  gen_synthetic_night.py  ppg_sweep.py  read_night.py  read_raw_ppg.py  score_night.py  sleeplog.py
(+11 files in other folders)
